@@ -3,6 +3,8 @@ package monostore.backend.routes;
 import java.util.*;
 import monostore.backend.datastore.DataStore;
 import monostore.backend.models.Product;
+import monostore.backend.service.ProductService;
+
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -12,6 +14,10 @@ import org.springframework.web.bind.annotation.*;
 @RequestMapping("/api/products")
 public class ProductController {
 
+  private final ProductService productService; 
+  public ProductController(ProductService productService) {
+    this.productService = productService;
+  }
   @GetMapping
   public Map<String, List<Product>>
   getAll(@RequestParam(required = false) String category,
@@ -21,7 +27,7 @@ public class ProductController {
     Map<String, List<Product>> results = new HashMap<>();
     if (category != null) {
       List<Product> filteredProducts = new ArrayList<>();
-      for (Product product : DataStore.products) {
+      for (Product product : productService.productStore) {
         if (product.getCategory().equalsIgnoreCase(category)) {
           filteredProducts.add(product);
         }
@@ -30,17 +36,18 @@ public class ProductController {
       return results;
     }
     
-    results.put("products", DataStore.products);
+    results.put("products", productService.productStore);
     return results;
   }
 
   @GetMapping("/{id}")
-  public HttpEntity<?> getById(@PathVariable String id) {
-    return DataStore.products.stream()
-        .filter(p -> p.getId().equals(id))
-        .findFirst()
-        .<ResponseEntity<?>>map(p -> ResponseEntity.ok(Collections.singletonMap("product", p)))
-        .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND) .body(Collections.singletonMap( "error", "Product not found")));
+  public HttpEntity<?> getById(@PathVariable String id) { 
+    Product product = productService.getProductById(id);
+    if (product != null) {
+      return ResponseEntity.ok(Map.of("product", product));
+    } else {
+      return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Collections.singletonMap("error", "Product not found"));
+    }
   }
   //
   //    @PostMapping
